--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <meta name="keywords" content="Hoktoto wap, Hoktoto link, Hoktoto togel, Hoktoto login alternatif, Hoktoto, Rekomendasi Slot Terbaik, Daftar Member Hoktoto" />
   <meta http-equiv="Accept-CH" content="Sec-CH-UA-Platform-Version, Sec-CH-UA-Model" />
   <link rel="icon" type="image/x-icon" href="https://i.ibb.co/wrSbmN3/HOKTOTO.png" />
-  <link rel="amphtml" href="https://moyugw.com/Hoktoto/" />
+  <link rel="amphtml" href="https://moyugw.com/hoktoto/" />
   <link rel="canonical" href="http://pemenangsejati.hotswapagent.org/" />
   <meta property="og:site_name" content="Hoktoto" />
   <meta property="og:title"
